--- a/listo-frontend-main/package.json
+++ b/listo-frontend-main/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.8",
     "date-fns": "^2.28.0",
     "fast-average-color": "^7.1.0",
     "gapi-script": "^1.2.0",
